--- a/actividades-css/border.css
+++ b/actividades-css/border.css
@@ -6,8 +6,11 @@
 
 /* Actividad 2 */
 .elemento2 {
-    border: 1rem solid;
-    border-color: orange;
+    border-top: 10px solid orange;
+    border-left: 10px dashed orange;
+    border-right: 10px dashed orange;
+    border-bottom: 10px solid orange;
+
 }
 
 /* Actividad 3 */
