--- a/actividades-css/3d.css
+++ b/actividades-css/3d.css
@@ -1,2 +1,28 @@
 /* Actividad 1 */
-/* Actividad 1 */
+.elemento1:hover{
+    transform: rotateY(20deg) rotateX(10deg) scale(1.1);
+    box-shadow: 20px 20px 40px rgba(0, 0, 0, 0.7);
+}
+
+/* Actividad 2 */
+.contenedor {
+    position: relative;
+    width: 600px;
+    height: 400px;
+}
+.pared {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    z-index: 0;
+}
+
+.obeja {
+    position: absolute;
+    top: 150px;
+    left: 100px;
+    width: 300px;
+}
+
+
+
