--- a/temps2_c_castropereira-html/temps2_c_kevincastro.css
+++ b/temps2_c_castropereira-html/temps2_c_kevincastro.css
@@ -1,3 +1,7 @@
-body {
-    background-color: black;
+body{
+    background-color: rgb(214, 191, 158); 
+}
+
+h2, p, div {
+    color: rgb(0, 0, 0);
 }
